--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,16 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 3.1.x
+        
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Calculator.sln
+      
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Calculator.sln --configuration Release --no-restore
+      
     - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: Test XPlat  
-      run: dotnet test --collect:"XPlat Code Coverage"
+      run: dotnet test Calculator.sln --configuration Release --no-build --verbosity normal 
+      
+    - name: Code Coverage
+      run: dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage
