--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,10 +18,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: | 
-          3.1.x
-          5.0.x
-          6.0.x
+        dotnet-version: 3.1
         
     - name: Restore dependencies
       run: dotnet restore Calculator.sln
