--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,13 +21,13 @@ jobs:
         dotnet-version: 3.1
         
     - name: Restore dependencies
-      run: dotnet restore Calculator.sln
+      run: dotnet restore Calculator/Calculator.sln
       
     - name: Build
-      run: dotnet build Calculator.sln --configuration Release --no-restore
+      run: dotnet build Calculator/Calculator.sln --configuration Release --no-restore
       
     - name: Test
-      run: dotnet test Calculator.sln --configuration Release --no-build --verbosity normal 
+      run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal 
       
     - name: Code Coverage
       run: dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage
