--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,10 +21,10 @@ jobs:
         dotnet-version: 3.1
         
     - name: Restore dependencies
-      run: dotnet restore Calculator/Calculator.sln
+      run: dotnet restore
       
     - name: Build
-      run: dotnet build Calculator/Calculator.sln --configuration Release --no-restore
+      run: dotnet build --no-restore
       
     - name: Test
       run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal 
