--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,8 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Codecov upload 
+      uses: codecov/codecov-action@v2
+      
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
