--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
           5.0.x
         
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Calculator/Calculator.sln
       
     - name: Build
       run: dotnet build --no-restore
