--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore Calculator/Calculator.sln
       
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Calculator/Calculator.sln --configuration Release --no-restore
       
     - name: Test
       run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal 
