--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,4 +35,4 @@ jobs:
       run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal 
       
     - name: Code Coverage
-      run: dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage
+      run: dotnet test Calculator/Calculator.sln --collect:"XPlat Code Coverage" --results-directory ./coverage
