--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Codecov upload 
       uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
       
     - name: Checkout
       uses: actions/checkout@v3
