--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,30 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Codecov upload 
-      uses: codecov/codecov-action@v2
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-      
     - name: Checkout
       uses: actions/checkout@v3
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: |
-          3.1.x
-          5.0.x
-          6.0.x
+        dotnet-version: 6.0.x
         
     - name: Restore dependencies
       run: dotnet restore Calculator/Calculator.sln
       
     - name: Build
-      run: dotnet build Calculator/Calculator.sln --configuration Release --no-restore
+      run: dotnet build Calculator/Calculator.sln --no-restore
       
     - name: Test
-      run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal 
+      run: dotnet test Calculator/Calculator.sln --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
       
-    - name: Code Coverage
-      run: dotnet test Calculator/Calculator.sln --collect:"XPlat Code Coverage" --results-directory ./coverage
+    - name: Codecov upload 
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}  
